tests/suite/snapshots/suite__case_pw8x.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Anchor
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: AnchorName
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Empty
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 4
- token: Break
  start:
    line: 0
    column: 4
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Break
  start:
    line: 2
    column: 1
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Anchor
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: AnchorName
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: Empty
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 4
- token: Separator
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 5
- token: MappingValue
  start:
    line: 3
    column: 5
  end:
    line: 3
    column: 6
- token: Separator
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: Scalar
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Break
  start:
    line: 3
    column: 8
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: MappingValue
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 4
- token: Separator
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: Anchor
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 6
- token: AnchorName
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 7
- token: Empty
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 7
- token: Break
  start:
    line: 4
    column: 7
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: SequenceEntry
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Break
  start:
    line: 5
    column: 1
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 2
- token: Anchor
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 3
- token: AnchorName
  start:
    line: 6
    column: 3
  end:
    line: 6
    column: 4
- token: Empty
  start:
    line: 6
    column: 4
  end:
    line: 6
    column: 4
- token: Separator
  start:
    line: 6
    column: 4
  end:
    line: 6
    column: 5
- token: MappingValue
  start:
    line: 6
    column: 5
  end:
    line: 6
    column: 6
- token: Separator
  start:
    line: 6
    column: 6
  end:
    line: 6
    column: 7
- token: Anchor
  start:
    line: 6
    column: 7
  end:
    line: 6
    column: 8
- token: AnchorName
  start:
    line: 6
    column: 8
  end:
    line: 6
    column: 9
- token: Empty
  start:
    line: 6
    column: 9
  end:
    line: 6
    column: 9
- token: Break
  start:
    line: 6
    column: 9
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0
- token: SequenceEntry
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: Break
  start:
    line: 7
    column: 1
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 2
- token: MappingKey
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 3
- token: Separator
  start:
    line: 8
    column: 3
  end:
    line: 8
    column: 4
- token: Anchor
  start:
    line: 8
    column: 4
  end:
    line: 8
    column: 5
- token: AnchorName
  start:
    line: 8
    column: 5
  end:
    line: 8
    column: 6
- token: Empty
  start:
    line: 8
    column: 6
  end:
    line: 8
    column: 6
- token: Break
  start:
    line: 8
    column: 6
  end:
    line: 9
    column: 0
- token: Empty
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 0
- token: SequenceEntry
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 1
- token: Break
  start:
    line: 9
    column: 1
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 2
- token: MappingKey
  start:
    line: 10
    column: 2
  end:
    line: 10
    column: 3
- token: Separator
  start:
    line: 10
    column: 3
  end:
    line: 10
    column: 4
- token: Anchor
  start:
    line: 10
    column: 4
  end:
    line: 10
    column: 5
- token: AnchorName
  start:
    line: 10
    column: 5
  end:
    line: 10
    column: 6
- token: Empty
  start:
    line: 10
    column: 6
  end:
    line: 10
    column: 6
- token: Break
  start:
    line: 10
    column: 6
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 2
- token: MappingValue
  start:
    line: 11
    column: 2
  end:
    line: 11
    column: 3
- token: Separator
  start:
    line: 11
    column: 3
  end:
    line: 11
    column: 4
- token: Anchor
  start:
    line: 11
    column: 4
  end:
    line: 11
    column: 5
- token: AnchorName
  start:
    line: 11
    column: 5
  end:
    line: 11
    column: 6
- token: Empty
  start:
    line: 11
    column: 6
  end:
    line: 11
    column: 6
- token: Break
  start:
    line: 11
    column: 6
  end:
    line: 12
    column: 0

