tests/suite/snapshots/suite__case_q88a.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: SequenceStart
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Scalar
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: CollectionEntry
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Separator
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: Scalar
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: Separator
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: SequenceEnd
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 10
    line: 0
    column: 10
- token: Break
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 12
    line: 1
    column: 0
- token: Indent
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 12
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 13
    line: 1
    column: 1
- token: Separator
  start:
    index: 13
    line: 1
    column: 1
  end:
    index: 14
    line: 1
    column: 2
- token: MappingStart
  start:
    index: 14
    line: 1
    column: 2
  end:
    index: 15
    line: 1
    column: 3
- token: Separator
  start:
    index: 15
    line: 1
    column: 3
  end:
    index: 16
    line: 1
    column: 4
- token: Scalar
  start:
    index: 16
    line: 1
    column: 4
  end:
    index: 17
    line: 1
    column: 5
- token: MappingValue
  start:
    index: 17
    line: 1
    column: 5
  end:
    index: 18
    line: 1
    column: 6
- token: Separator
  start:
    index: 18
    line: 1
    column: 6
  end:
    index: 19
    line: 1
    column: 7
- token: Scalar
  start:
    index: 19
    line: 1
    column: 7
  end:
    index: 20
    line: 1
    column: 8
- token: Separator
  start:
    index: 20
    line: 1
    column: 8
  end:
    index: 21
    line: 1
    column: 9
- token: MappingEnd
  start:
    index: 21
    line: 1
    column: 9
  end:
    index: 22
    line: 1
    column: 10
- token: Break
  start:
    index: 22
    line: 1
    column: 10
  end:
    index: 24
    line: 2
    column: 0
- token: Indent
  start:
    index: 24
    line: 2
    column: 0
  end:
    index: 24
    line: 2
    column: 0
- token: SequenceEntry
  start:
    index: 24
    line: 2
    column: 0
  end:
    index: 25
    line: 2
    column: 1
- token: Separator
  start:
    index: 25
    line: 2
    column: 1
  end:
    index: 26
    line: 2
    column: 2
- token: DoubleQuote
  start:
    index: 26
    line: 2
    column: 2
  end:
    index: 27
    line: 2
    column: 3
- token: DoubleQuoted
  start:
    index: 27
    line: 2
    column: 3
  end:
    index: 28
    line: 2
    column: 4
- token: DoubleQuote
  start:
    index: 28
    line: 2
    column: 4
  end:
    index: 29
    line: 2
    column: 5
- token: Break
  start:
    index: 29
    line: 2
    column: 5
  end:
    index: 31
    line: 3
    column: 0
- token: Indent
  start:
    index: 31
    line: 3
    column: 0
  end:
    index: 31
    line: 3
    column: 0
- token: SequenceEntry
  start:
    index: 31
    line: 3
    column: 0
  end:
    index: 32
    line: 3
    column: 1
- token: Separator
  start:
    index: 32
    line: 3
    column: 1
  end:
    index: 33
    line: 3
    column: 2
- token: SingleQuote
  start:
    index: 33
    line: 3
    column: 2
  end:
    index: 34
    line: 3
    column: 3
- token: SingleQuoted
  start:
    index: 34
    line: 3
    column: 3
  end:
    index: 35
    line: 3
    column: 4
- token: SingleQuote
  start:
    index: 35
    line: 3
    column: 4
  end:
    index: 36
    line: 3
    column: 5
- token: Break
  start:
    index: 36
    line: 3
    column: 5
  end:
    index: 38
    line: 4
    column: 0
- token: Indent
  start:
    index: 38
    line: 4
    column: 0
  end:
    index: 38
    line: 4
    column: 0
- token: SequenceEntry
  start:
    index: 38
    line: 4
    column: 0
  end:
    index: 39
    line: 4
    column: 1
- token: Separator
  start:
    index: 39
    line: 4
    column: 1
  end:
    index: 40
    line: 4
    column: 2
- token: Scalar
  start:
    index: 40
    line: 4
    column: 2
  end:
    index: 41
    line: 4
    column: 3
- token: Break
  start:
    index: 41
    line: 4
    column: 3
  end:
    index: 43
    line: 5
    column: 0

