tests/suite/snapshots/suite__case_q9wf.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingStart
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Scalar
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 7
    line: 0
    column: 7
- token: MappingValue
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: Separator
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: Scalar
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 14
    line: 0
    column: 14
- token: CollectionEntry
  start:
    index: 14
    line: 0
    column: 14
  end:
    index: 15
    line: 0
    column: 15
- token: Separator
  start:
    index: 15
    line: 0
    column: 15
  end:
    index: 16
    line: 0
    column: 16
- token: Scalar
  start:
    index: 16
    line: 0
    column: 16
  end:
    index: 20
    line: 0
    column: 20
- token: MappingValue
  start:
    index: 20
    line: 0
    column: 20
  end:
    index: 21
    line: 0
    column: 21
- token: Separator
  start:
    index: 21
    line: 0
    column: 21
  end:
    index: 22
    line: 0
    column: 22
- token: Scalar
  start:
    index: 22
    line: 0
    column: 22
  end:
    index: 26
    line: 0
    column: 26
- token: Separator
  start:
    index: 26
    line: 0
    column: 26
  end:
    index: 27
    line: 0
    column: 27
- token: MappingEnd
  start:
    index: 27
    line: 0
    column: 27
  end:
    index: 28
    line: 0
    column: 28
- token: MappingValue
  start:
    index: 28
    line: 0
    column: 28
  end:
    index: 29
    line: 0
    column: 29
- token: Break
  start:
    index: 29
    line: 0
    column: 29
  end:
    index: 31
    line: 1
    column: 0
- token: Comment
  start:
    index: 31
    line: 1
    column: 0
  end:
    index: 32
    line: 1
    column: 1
- token: CommentText
  start:
    index: 32
    line: 1
    column: 1
  end:
    index: 44
    line: 1
    column: 13
- token: Break
  start:
    index: 44
    line: 1
    column: 13
  end:
    index: 46
    line: 2
    column: 0
- token: Indent
  start:
    index: 46
    line: 2
    column: 0
  end:
    index: 48
    line: 2
    column: 2
- token: Scalar
  start:
    index: 48
    line: 2
    column: 2
  end:
    index: 50
    line: 2
    column: 4
- token: MappingValue
  start:
    index: 50
    line: 2
    column: 4
  end:
    index: 51
    line: 2
    column: 5
- token: Separator
  start:
    index: 51
    line: 2
    column: 5
  end:
    index: 53
    line: 2
    column: 7
- token: Comment
  start:
    index: 53
    line: 2
    column: 7
  end:
    index: 54
    line: 2
    column: 8
- token: CommentText
  start:
    index: 54
    line: 2
    column: 8
  end:
    index: 64
    line: 2
    column: 18
- token: Break
  start:
    index: 64
    line: 2
    column: 18
  end:
    index: 66
    line: 3
    column: 0
- token: Indent
  start:
    index: 66
    line: 3
    column: 0
  end:
    index: 69
    line: 3
    column: 3
- token: Separator
  start:
    index: 69
    line: 3
    column: 3
  end:
    index: 71
    line: 3
    column: 5
- token: Scalar
  start:
    index: 71
    line: 3
    column: 5
  end:
    index: 73
    line: 3
    column: 7
- token: Break
  start:
    index: 73
    line: 3
    column: 7
  end:
    index: 75
    line: 4
    column: 0
- token: Indent
  start:
    index: 75
    line: 4
    column: 0
  end:
    index: 77
    line: 4
    column: 2
- token: Scalar
  start:
    index: 77
    line: 4
    column: 2
  end:
    index: 80
    line: 4
    column: 5
- token: MappingValue
  start:
    index: 80
    line: 4
    column: 5
  end:
    index: 81
    line: 4
    column: 6
- token: Separator
  start:
    index: 81
    line: 4
    column: 6
  end:
    index: 82
    line: 4
    column: 7
- token: Comment
  start:
    index: 82
    line: 4
    column: 7
  end:
    index: 83
    line: 4
    column: 8
- token: CommentText
  start:
    index: 83
    line: 4
    column: 8
  end:
    index: 91
    line: 4
    column: 16
- token: Break
  start:
    index: 91
    line: 4
    column: 16
  end:
    index: 93
    line: 5
    column: 0
- token: Indent
  start:
    index: 93
    line: 5
    column: 0
  end:
    index: 96
    line: 5
    column: 3
- token: Scalar
  start:
    index: 96
    line: 5
    column: 3
  end:
    index: 101
    line: 5
    column: 8
- token: Break
  start:
    index: 101
    line: 5
    column: 8
  end:
    index: 103
    line: 6
    column: 0

