tests/suite/snapshots/suite__case_qlj7.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: invalid block node
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 3

