tests/suite/snapshots/suite__case_r10v_01.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Indent
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: SequenceEntry
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Empty
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 3

