tests/suite/snapshots/suite__case_r10v_02.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Indent
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: SequenceEntry
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Empty
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0

